--- a/app/assets/stylesheets/story/show.css
+++ b/app/assets/stylesheets/story/show.css
@@ -1,114 +1,79 @@
 table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      background-color: white;
-      border-radius: 10px;
-    }
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-radius: 10px;
+}
 
-    th, td {
-      padding: 12px 20px;
-      text-align: left;
-      border: 1px solid #ddd;
-    }
+th,
+td {
+  padding: 12px 20px;
+  text-align: left;
+  border: 1px solid #ddd;
+}
 
-    th {
-      background-color: #4CAF50;
-      color: white;
-      font-size: 16px;
-    }
+th {
+  background-color: #4caf50;
+  color: white;
+  font-size: 16px;
+}
 
-    td {
-      font-size: 14px;
-    }
+td {
+  font-size: 14px;
+}
 
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 
-    tr:hover {
-      background-color: #eaeaea;
-    }
+tr:hover {
+  background-color: #eaeaea;
+}
 
-    .status {
-      font-weight: bold;
-      padding: 4px 10px;
-      border-radius: 5px;
-      text-align: center;
-    }
+.status {
+  font-weight: bold;
+  padding: 4px 10px;
+  border-radius: 5px;
+  text-align: center;
+}
 
-    .status.in-progress {
-      background-color: orange;
-      color: white;
-    }
+.status.in-progress {
+  background-color: orange;
+  color: white;
+}
 
-    .status.not-started {
-      background-color: red;
-      color: white;
-    }
+.status.not-started {
+  background-color: red;
+  color: white;
+}
 
-    .status.completed {
-      background-color: green;
-      color: white;
-    }
+.status.completed {
+  background-color: green;
+  color: white;
+}
 
-    .task-detail h2 {
-      color: #333;
-    }
+.task-detail h2 {
+  color: #333;
+}
 
-    .task-detail p {
-      font-size: 16px;
-      line-height: 1.5;
-      color: #555;
-    }
+.task-detail p {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #555;
+}
 
 .status-label {
-    display: inline-block;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 14px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  display: inline-block;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 .status-label:hover {
-    background-color: #ddd;
-}
-.init {
-    background-color: #f0f0f0;
-}
-.pending {
-    background-color: #ffcc80;
-}
-.in_progress {
-    background-color: #90caf9;
-}
-.resolved {
-    background-color: #81c784;
-}
-.code_review {
-    background-color: #ff7043;
-}
-.testing {
-    background-color: #ffeb3b;
-}
-.verified {
-    background-color: #8e24aa;
-}
-.jp_side {
-    background-color: #d32f2f;
-}
-.feedback {
-    background-color: #f57c00;
-}
-.waiting_release {
-    background-color: #0288d1;
-}
-.released {
-    background-color: #43a047;
-}
-.closed {
-    background-color: #757575;
+  background-color: #ddd;
 }
 
 .highlight-row {
@@ -116,6 +81,9 @@ table {
   color: #721c24; /* Màu chữ đỏ */
 }
 
+header h1 {
+  color: white;
+}
 
 h1 {
   text-align: center;
@@ -182,55 +150,6 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   font-size: 14px;
-}
-
-.status.init {
-    background-color: #f0f0f0;
-    color: white;
-}
-.status.pending {
-    background-color: #ffcc80;
-    color: white;
-}
-.status.in_progress {
-    background-color: #90caf9;
-    color: white;
-}
-.status.resolved {
-    background-color: #81c784;
-    color: white;
-}
-.status.code_review {
-    background-color: #ff7043;
-    color: white;
-}
-.status.testing {
-    background-color: #ffeb3b;
-    color: white;
-}
-.status.verified {
-    background-color: #8e24aa;
-    color: white;
-}
-.status.jp_side {
-    background-color: #d32f2f;
-    color: white;
-}
-.status.feedback {
-    background-color: #f57c00;
-    color: white;
-}
-.status.waiting_release {
-    background-color: #0288d1;
-    color: white;
-}
-.status.released {
-    background-color: #43a047;
-    color: white;
-}
-.status.closed {
-    background-color: #757575;
-    color: white;
 }
 
 .accordion {
