--- a/app/views/apw/reports/index.html.erb
+++ b/app/views/apw/reports/index.html.erb
@@ -48,187 +48,196 @@
   <% end %>
 
 <!-- Biểu đồ -->
-<div class="charts-container">
-  <div class="chart">
-    <h3>The workload quantity</h3>
-    <div id="chart_div" class="chart-canvas"></div>
+<div class="sub-container" style="margin-bottom: 30px;">
+  <div class="charts-container">
+    <div class="chart">
+      <h3>The workload quantity</h3>
+      <div id="chart_div" class="chart-canvas"></div>
+    </div>
+  </div>
+  <div class="charts-container">
+    <div class="chart">
+      <div id="chart_with_role" class="chart-canvas"></div>
+    </div>
   </div>
 </div>
-<div class="charts-container">
-  <div class="chart">
-    <div id="chart_with_role" class="chart-canvas"></div>
-  </div>
-</div>
-<div class="charts-container">
-  <div class="chart">
-    <h3>Accuracy of estimates</h3>
-    <div id="chart_task_div" class="chart-canvas"></div>
-  </div>
-</div>
-<hr>
-<h3>Classify the workload</h3>
-<div class="charts-container">
-  <div class="chart">
-    <div id="piechart_3d" class="chart-canvas"></div>
-  </div>
-  <div class="chart">
-    <div id="piechart_3d_detail" class="chart-canvas"></div>
-  </div>
-</div>
-<hr>
-<h3>Difficulty of tasks</h3>
-<div class="charts-container">
-  <div class="chart">
-    <div id="linechart_difficulty" class="chart-canvas"></div>
-  </div>
-</div>
-<div class="charts-container">
-  <div class="chart">
-    <div id="linechart_difficulty_coding" class="chart-canvas"></div>
-  </div>
 
-  <div class="chart">
-    <div id="linechart_difficulty_testing" class="chart-canvas"></div>
+<div class="sub-container" style="margin-bottom: 30px;padding-bottom: 30px;">
+  <div class="charts-container">
+    <div class="chart">
+      <h3>Accuracy of estimates</h3>
+      <div id="chart_task_div" class="chart-canvas"></div>
+    </div>
   </div>
-</div>
-<hr>
-<h3>Quality of development</h3>
-<div class="charts-container">
-  <div class="chart">
-    <div id="chart_bug_div" class="chart-canvas"></div>
+  <hr>
+  <h3>Classify the workload</h3>
+  <div class="charts-container">
+    <div class="chart">
+      <div id="piechart_3d" class="chart-canvas"></div>
+    </div>
+    <div class="chart">
+      <div id="piechart_3d_detail" class="chart-canvas"></div>
+    </div>
   </div>
-
-  <div class="chart">
-    <div id="chart_tester_div" class="chart-canvas"></div>
+  <hr>
+  <h3>Difficulty of tasks</h3>
+  <div class="charts-container">
+    <div class="chart">
+      <div id="linechart_difficulty" class="chart-canvas"></div>
+    </div>
   </div>
-</div>
-<hr>
-<!-- Bảng dữ liệu -->
-<h3>Average hours to complete a task</h3>
-<table>
-  <thead>
-    <tr>
-      <th>Task difficulty</th>
-      <th>Average Total Hours</th>
-      <th>Average Requirement Hours</th>
-      <th>Average Design Hours</th>
-      <th>Average Coding Hours</th>
-      <th>Average Testing Hours</th>
-      <th>Average Bug Fixing Hours</th>
-      <th>Average Release Hours</th>
-      <th>Average Cross Support Hours</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @support.time_based_on_difficulty.each do |k, v| %>
-    <tr>
-      <td><%= k.upcase %></td>
-      <td><%= v[:total] %></td>
-      <td><%= v[:requirement] %></td>
-      <td><%= v[:design] %></td>
-      <td><%= v[:coding] %></td>
-      <td><%= v[:testing] %></td>
-      <td><%= v[:bug_fixing] %></td>
-      <td><%= v[:release] %></td>
-      <td><%= v[:cross_support] %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="charts-container">
+    <div class="chart">
+      <div id="linechart_difficulty_coding" class="chart-canvas"></div>
+    </div>
 
+    <div class="chart">
+      <div id="linechart_difficulty_testing" class="chart-canvas"></div>
+    </div>
+  </div>
+  <hr>
+  <h3>Quality of development</h3>
+  <div class="charts-container">
+    <div class="chart">
+      <div id="chart_bug_div" class="chart-canvas"></div>
+    </div>
 
-<h3>Detailed data for each task</h3>
-<h5>
-  Total story:
-  <span id="story-count"><%= @support.stories.size %></span>
-</h5>
-<div class="table-container">
-  <table id="sortableTable">
-      <thead>
-          <tr>
-            <th class="sortable fixed-column"onclick="sortTable(0)"></th>
-            <th class="sortable" onclick="sortTable(1)">Remine </th>
-            <th class="sortable">
-              Status
-              <span class="filter-icon" onclick="toggleFilter('filterStatus', event)">&#x1F50D;</span>
-            </th>
-            <th class="sortable">
-              Difficulty Level
-              <span class="filter-icon" onclick="toggleFilter('filterLevel', event)">&#x1F50D;</span>
-            </th>
-            <th class="sortable">Subject</th>
-            <th class="sortable" onclick="sortTable(5)">Total Estimated Hours</th>
-            <th class="sortable" onclick="sortTable(6)">Total Spent Hours</th>
-            <th class="sortable" onclick="sortTable(7)">Spent Estimate Ratio</th>
-            <th class="sortable" onclick="sortTable(8)">Prod Bug</th>
-            <th class="sortable" onclick="sortTable(9)">Stg Bug</th>
-            <th class="sortable" onclick="sortTable(10)">TestCase Count</th>
-            <th class="sortable" onclick="sortTable(11)">Requirement Hours</th>
-            <th class="sortable" onclick="sortTable(12)">Design Hours</th>
-            <th class="sortable" onclick="sortTable(13)">Coding Hours</th>
-            <th class="sortable" onclick="sortTable(14)">Testing Hours</th>
-            <th class="sortable" onclick="sortTable(15)">Bug Fixing Hours</th>
-            <th class="sortable" onclick="sortTable(16)">Cross Support Hours</th>
-            <th class="sortable" onclick="sortTable(17)">Release Hours</th>
-          </tr>
-      </thead>
-      <tbody>
-          <% @support.stories.each do |story| %>
-          <tr>
-              <td class="fixed-column">
-                <%= link_to "Detail", apw_story_path(story.id), target: "_blank", class: "btn" %>
-              </td>
-              <td>
-                <%= link_to story.issue_id, "https://dev.zigexn.vn/issues/#{story.issue_id}", target: "_blank" %>
-              </td>
-              <td data-status="<%= story.status %>">
-                <span class="status-label <%= story.status %>"><%= story.status %></span>
-              </td>
-              <td data-level="<%= story.level %>">
-                <span class="level-label <%= story.level %>"><%= story.level %></span>
-              </td>
-              <td>
-                <%= story.subject %>
-              </td>
-              <td><%= story.total_estimated_hours %></td>
-              <td><%= story.total_spent_hours %></td>
-              <td><%= story.time_estimate_ratio %></td>
-              <td><%= story.prod_bug_count %></td>
-              <td><%= story.bug_count %></td>
-              <td><%= story.test_case_count %></td>
-              <td><%= story.requirement_hours %></td>
-              <td><%= story.design_hours %></td>
-              <td><%= story.coding_hours %></td>
-              <td><%= story.testing_hours %></td>
-              <td><%= story.bug_fixing_hours %></td>
-              <td><%= story.cross_support_hours %></td>
-              <td><%= story.release_hours %></td>
-          </tr>
-        <% end %>
+    <div class="chart">
+      <div id="chart_tester_div" class="chart-canvas"></div>
+    </div>
+  </div>
+  <hr>
+  <!-- Bảng dữ liệu -->
+  <h3>Average hours to complete a task</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>Task difficulty</th>
+        <th>Average Total Hours</th>
+        <th>Average Requirement Hours</th>
+        <th>Average Design Hours</th>
+        <th>Average Coding Hours</th>
+        <th>Average Testing Hours</th>
+        <th>Average Bug Fixing Hours</th>
+        <th>Average Release Hours</th>
+        <th>Average Cross Support Hours</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @support.time_based_on_difficulty.each do |k, v| %>
+      <tr>
+        <td><%= k.upcase %></td>
+        <td><%= v[:total] %></td>
+        <td><%= v[:requirement] %></td>
+        <td><%= v[:design] %></td>
+        <td><%= v[:coding] %></td>
+        <td><%= v[:testing] %></td>
+        <td><%= v[:bug_fixing] %></td>
+        <td><%= v[:release] %></td>
+        <td><%= v[:cross_support] %></td>
+      </tr>
+      <% end %>
     </tbody>
   </table>
-  <div id="filterLevel" class="filter-container">
-    <label><input type="checkbox" value="unset" onclick="filterTable()">Unset</label>
-    <label><input type="checkbox" value="basic" onclick="filterTable()">Basic</label>
-    <label><input type="checkbox" value="intermediate" onclick="filterTable()">Intermediate</label>
-    <label><input type="checkbox" value="upper_intermediate" onclick="filterTable()">Upper Intermediate</label>
-    <label><input type="checkbox" value="advanced" onclick="filterTable()">Advanced</label>
-    <label><input type="checkbox" value="expert" onclick="filterTable()">Expert</label>
-  </div>
+</div>
 
-  <div id="filterStatus" class="filter-container">
-    <label><input type="checkbox" value="init" onclick="filterTable()">Init</label>
-    <label><input type="checkbox" value="pending" onclick="filterTable()">Pending</label>
-    <label><input type="checkbox" value="in_progress" onclick="filterTable()">In Progress</label>
-    <label><input type="checkbox" value="resolved" onclick="filterTable()">Resolved</label>
-    <label><input type="checkbox" value="code_review" onclick="filterTable()">Code Review</label>
-    <label><input type="checkbox" value="testing" onclick="filterTable()">Testing</label>
-    <label><input type="checkbox" value="verified" onclick="filterTable()">Verified</label>
-    <label><input type="checkbox" value="jp_side" onclick="filterTable()">JP Side</label>
-    <label><input type="checkbox" value="feedback" onclick="filterTable()">Feedback</label>
-    <label><input type="checkbox" value="waiting_release" onclick="filterTable()">Waiting Release</label>
-    <label><input type="checkbox" value="released" onclick="filterTable()">Released</label>
-    <label><input type="checkbox" value="closed" onclick="filterTable()">Closed</label>
+<div class="sub-container" style="padding-bottom: 30px;">
+  <h2>Detailed data for each task</h2>
+  <h4>
+    Total story:
+    <span id="story-count"><%= @support.stories.size %></span>
+  </h4>
+  <div class="table-wrapper">
+    <div class="table-container">
+      <table id="sortableTable">
+          <thead>
+            <tr>
+              <th class="sortable fixed-column"onclick="sortTable(0)"></th>
+              <th class="sortable" onclick="sortTable(1)">Remine </th>
+              <th class="sortable">
+                Status
+                <span class="filter-icon" onclick="toggleFilter('filterStatus', event)">&#x1F50D;</span>
+              </th>
+              <th class="sortable">
+                Difficulty Level
+                <span class="filter-icon" onclick="toggleFilter('filterLevel', event)">&#x1F50D;</span>
+              </th>
+              <th class="sortable">Subject</th>
+              <th class="sortable" onclick="sortTable(5)">Total Estimated Hours</th>
+              <th class="sortable" onclick="sortTable(6)">Total Spent Hours</th>
+              <th class="sortable" onclick="sortTable(7)">Spent Estimate Ratio</th>
+              <th class="sortable" onclick="sortTable(8)">Prod Bug</th>
+              <th class="sortable" onclick="sortTable(9)">Stg Bug</th>
+              <th class="sortable" onclick="sortTable(10)">TestCase Count</th>
+              <th class="sortable" onclick="sortTable(11)">Requirement Hours</th>
+              <th class="sortable" onclick="sortTable(12)">Design Hours</th>
+              <th class="sortable" onclick="sortTable(13)">Coding Hours</th>
+              <th class="sortable" onclick="sortTable(14)">Testing Hours</th>
+              <th class="sortable" onclick="sortTable(15)">Bug Fixing Hours</th>
+              <th class="sortable" onclick="sortTable(16)">Cross Support Hours</th>
+              <th class="sortable" onclick="sortTable(17)">Release Hours</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% @support.stories.each do |story| %>
+            <tr>
+                <td class="fixed-column">
+                  <%= link_to apw_story_path(story.id), target: "_blank", class: "btn" do %>
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-info-circle"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M12 9h.01" /><path d="M11 12h1v4h1" /></svg>
+                  <% end %>
+                </td>
+                <td>
+                  <%= link_to story.issue_id, "https://dev.zigexn.vn/issues/#{story.issue_id}", target: "_blank" %>
+                </td>
+                <td data-status="<%= story.status %>">
+                  <span class="status-label <%= story.status %>"><%= story.status %></span>
+                </td>
+                <td data-level="<%= story.level %>">
+                  <span class="level-label <%= story.level %>"><%= story.level %></span>
+                </td>
+                <td style="width: 300px;">
+                  <%= story.subject %>
+                </td>
+                <td><%= story.total_estimated_hours %></td>
+                <td><%= story.total_spent_hours %></td>
+                <td><%= story.time_estimate_ratio %></td>
+                <td><%= story.prod_bug_count %></td>
+                <td><%= story.bug_count %></td>
+                <td><%= story.test_case_count %></td>
+                <td><%= story.requirement_hours %></td>
+                <td><%= story.design_hours %></td>
+                <td><%= story.coding_hours %></td>
+                <td><%= story.testing_hours %></td>
+                <td><%= story.bug_fixing_hours %></td>
+                <td><%= story.cross_support_hours %></td>
+                <td><%= story.release_hours %></td>
+            </tr>
+          <% end %>
+      </tbody>
+    </table>
+    <div id="filterLevel" class="filter-container">
+      <label><input type="checkbox" value="unset" onclick="filterTable()">Unset</label>
+      <label><input type="checkbox" value="basic" onclick="filterTable()">Basic</label>
+      <label><input type="checkbox" value="intermediate" onclick="filterTable()">Intermediate</label>
+      <label><input type="checkbox" value="upper_intermediate" onclick="filterTable()">Upper Intermediate</label>
+      <label><input type="checkbox" value="advanced" onclick="filterTable()">Advanced</label>
+      <label><input type="checkbox" value="expert" onclick="filterTable()">Expert</label>
+    </div>
+
+    <div id="filterStatus" class="filter-container">
+      <label><input type="checkbox" value="init" onclick="filterTable()">Init</label>
+      <label><input type="checkbox" value="pending" onclick="filterTable()">Pending</label>
+      <label><input type="checkbox" value="in_progress" onclick="filterTable()">In Progress</label>
+      <label><input type="checkbox" value="resolved" onclick="filterTable()">Resolved</label>
+      <label><input type="checkbox" value="code_review" onclick="filterTable()">Code Review</label>
+      <label><input type="checkbox" value="testing" onclick="filterTable()">Testing</label>
+      <label><input type="checkbox" value="verified" onclick="filterTable()">Verified</label>
+      <label><input type="checkbox" value="jp_side" onclick="filterTable()">JP Side</label>
+      <label><input type="checkbox" value="feedback" onclick="filterTable()">Feedback</label>
+      <label><input type="checkbox" value="waiting_release" onclick="filterTable()">Waiting Release</label>
+      <label><input type="checkbox" value="released" onclick="filterTable()">Released</label>
+      <label><input type="checkbox" value="closed" onclick="filterTable()">Closed</label>
+    </div>
   </div>
 </div>
 
